--- a/Rime/weasel/data/_speller/double/abc.yaml
+++ b/Rime/weasel/data/_speller/double/abc.yaml
@@ -1,4 +1,4 @@
-﻿module_dmma: {comment_format: ["xlit/ZCSBH/aevee/"]}
+module_dmma: {comment_format: ["xlit/ZCSBH/aevee/"]}
 module_fnua_cn:
  comment_format: &comment
   - derive/\<([jqxy])u\>/\1v/
