--- a/Rime/weasel/user/_schema_settings/ts_en.yaml
+++ b/Rime/weasel/user/_schema_settings/ts_en.yaml
@@ -1,8 +1,9 @@
 ﻿switches:
- - {name: ascii_mode,  reset: 0, states: [汉, 英]}
- - {name: ascii_punct, reset: 0, states: ["中", " "]}
- - {name: full_shape,  reset: 0, states: [" ", "全"]}
- - {name: fil_trans,   reset: 0, states: [" ", "译"]}
+ - {name: ascii_mode,     reset: 0, states: [汉, 英]}
+ - {name: ascii_punct,    reset: 0, states: ["中", " "]}
+ - {name: full_shape,     reset: 0, states: [" ", "全"]}
+ - {name: fil_trans,      reset: 0, states: [" ", "译"]}
+ - {name: fil_KijinSeija, reset: 0, states: ["正", "倒"]}
 array:
  bindings:
   - {accept: "Control+minus", select: ts_cn_quanpin, when: always}
