--- a/Rime/weasel/user/_schema_settings/ts_mini_linga.yaml
+++ b/Rime/weasel/user/_schema_settings/ts_mini_linga.yaml
@@ -1,7 +1,8 @@
 ﻿switches:
- - {name: ascii_mode,  reset: 0, states: [汉, 英]}
- - {name: ascii_punct, reset: 0, states: ["中", " "]}
- - {name: full_shape,  reset: 0, states: [" ", "全"]}
+ - {name: ascii_mode,     reset: 0, states: [汉, 英]}
+ - {name: ascii_punct,    reset: 0, states: ["中", " "]}
+ - {name: full_shape,     reset: 0, states: [" ", "全"]}
+ - {name: fil_KijinSeija, reset: 0, states: ["正", "倒"]}
 array:
  bindings:
   - {accept: "Control+equal", select: ts_cn, when: always}
