--- a/Rime/weasel/data/ts__detail.yaml
+++ b/Rime/weasel/data/ts__detail.yaml
@@ -41,7 +41,7 @@ engine:
   - lua_filter@fil_KijinSeija
   - lua_filter@fil_Unicode
 custom_phrase: {dictionary: custom_phrase, initial_quality: 64, enable_user_dict: false, enable_completion: false, enable_sentence: false}
-custom_symbol: {dictionary: custom_symbol, initial_quality: 64, enable_user_dict: false, tag: custom_symbol}
+custom_symbol: {dictionary: custom_symbol, initial_quality: 64, enable_user_dict: true , tag: custom_symbol}
 fil_s2t: {option_name: fil_s2t, opencc_config: s2t.json, tips: all, tags: [abc]}
 fil_emoji: {option_name: fil_emoji, opencc_config: emoji.json, tips: all, tags: [abc]}
 fil_users: {option_name: fil_emoji, opencc_config: users.json, tips: all, tags: [abc]}
