--- a/Rime/weasel/data/_speller/double/66.yaml
+++ b/Rime/weasel/data/_speller/double/66.yaml
@@ -39,9 +39,9 @@ speller:
  alphabet: "zyxwvutsrqponmlkjihgfedcba;ZYXWVUTSRQPONMLKJIHGFEDCBA-=|"
  initials: "zyxwvutsrqponmlkjihgfedcba;ZYXWVUTSRQPONMLKJIHGFEDCBA"
  jian:
-  - xform/Z/v/
-  - xform/C/u/
-  - xform/S/i/
+  - xform/zh/v/
+  - xform/ch/u/
+  - xform/sh/i/
  algebra:
   - derive/^([jqxy])u(?='|$)/\1v/
   - xform/^([aoe])(.*)(?='|$)/"\1"\1\2/
