--- a/Rime/weasel/data/_speller/double/microsoft.yaml
+++ b/Rime/weasel/data/_speller/double/microsoft.yaml
@@ -40,9 +40,9 @@ speller:
  alphabet: "zyxwvutsrqponmlkjihgfedcba;ZYXWVUTSRQPONMLKJIHGFEDCBA-=|"
  initials: "zyxwvutsrqponmlkjihgfedcba;ZYXWVUTSRQPONMLKJIHGFEDCBA"
  jian:
-  - xform/^Z/v/
-  - xform/^C/i/
-  - xform/^S/u/
+  - xform/^zh/v/
+  - xform/^ch/i/
+  - xform/^sh/u/
  algebra:
   - derive/^([jqxy])u(?='|$)/\1v/
   - xform/^([aoe].*)(?='|$)/"o"\1/
