--- a/Rime/weasel/data/_speller/double/xiaohe.yaml
+++ b/Rime/weasel/data/_speller/double/xiaohe.yaml
@@ -39,9 +39,9 @@ speller:
  alphabet: "zyxwvutsrqponmlkjihgfedcbaZYXWVUTSRQPONMLKJIHGFEDCBA-=|"
  initials: "zyxwvutsrqponmlkjihgfedcbaZYXWVUTSRQPONMLKJIHGFEDCBA"
  jian:
-  - xform/^Z/v/
-  - xform/^C/i/
-  - xform/^S/u/
+  - xform/^zh/v/
+  - xform/^ch/i/
+  - xform/^sh/u/
  algebra:
   - derive/^([jqxy])u(?='|$)/\1v/
   - xform/^([aoe])(.*)(?='|$)/"\1"\1\2/
