--- a/Rime/weasel/user_default/custom_symbol.dict.yaml
+++ b/Rime/weasel/user_default/custom_symbol.dict.yaml
@@ -2653,150 +2653,12 @@ m̀	py	拼音
 ŋ	py	拼音
 #py:
 #拼音#
-﹅	bdz	拼音
-﹆	bdz	拼音
-﹁	bdz	拼音
-﹂	bdz	拼音
-﹃	bdz	拼音
-﹄	bdz	拼音
-︙	bdz	拼音
-︱	bdz	拼音
-︻	bdz	拼音
-︼	bdz	拼音
-︗	bdz	拼音
-︘	bdz	拼音
-︵	bdz	拼音
-︶	bdz	拼音
-︷	bdz	拼音
-︸	bdz	拼音
-︹	bdz	拼音
-︺	bdz	拼音
-︿	bdz	拼音
-﹀	bdz	拼音
-︽	bdz	拼音
-︾	bdz	拼音
-︰	bdz	拼音
-︲	bdz	拼音
-︳	bdz	拼音
-︴	bdz	拼音
-﹉	bdz	拼音
-﹊	bdz	拼音
-﹋	bdz	拼音
-﹌	bdz	拼音
-﹍	bdz	拼音
-﹎	bdz	拼音
-﹏	bdz	拼音
-﹇	bdz	拼音
-﹈	bdz	拼音
-︐	bdz	拼音
-︑	bdz	拼音
-︒	bdz	拼音
-︔	bdz	拼音
-︕	bdz	拼音
-︖	bdz	拼音
-#bdz:
-#标点竖#
-、	bd	标点竖
-。	bd	标点竖
-「	bd	标点竖
-」	bd	标点竖
-『	bd	标点竖
-』	bd	标点竖
-【	bd	标点竖
-】	bd	标点竖
-〈	bd	标点竖
-〉	bd	标点竖
-《	bd	标点竖
-》	bd	标点竖
-₋	bd	标点竖
-⁻	bd	标点竖
-―	bd	标点竖
-˗	bd	标点竖
-ˉ	bd	标点竖
-＿	bd	标点竖
-﹍	bd	标点竖
-﹎	bd	标点竖
-．	bd	标点竖
-¡	bd	标点竖
-‼	bd	标点竖
-⁉	bd	标点竖
-¿	bd	标点竖
-؟	bd	标点竖
-⁈	bd	标点竖
-⁇	bd	标点竖
-､	bd	标点竖
-｡	bd	标点竖
-〃	bd	标点竖
-〄	bd	标点竖
-々	bd	标点竖
-〆	bd	标点竖
-〇	bd	标点竖
-〒	bd	标点竖
-〓	bd	标点竖
-〔	bd	标点竖
-〕	bd	标点竖
-〖	bd	标点竖
-〗	bd	标点竖
-〘	bd	标点竖
-〙	bd	标点竖
-〚	bd	标点竖
-〛	bd	标点竖
-〜	bd	标点竖
-〝	bd	标点竖
-〞	bd	标点竖
-〟	bd	标点竖
-〠	bd	标点竖
-〰	bd	标点竖
-〱	bd	标点竖
-〲	bd	标点竖
-〳	bd	标点竖
-〴	bd	标点竖
-〵	bd	标点竖
-〶	bd	标点竖
-〷	bd	标点竖
-〻	bd	标点竖
-〼	bd	标点竖
-〽	bd	标点竖
-#bd:
-#标点#
-㇀	bh	标点
-㇁	bh	标点
-㇂	bh	标点
-㇃	bh	标点
-㇄	bh	标点
-㇅	bh	标点
-㇆	bh	标点
-㇇	bh	标点
-㇈	bh	标点
-㇉	bh	标点
-㇊	bh	标点
-㇋	bh	标点
-㇌	bh	标点
-㇍	bh	标点
-㇎	bh	标点
-㇏	bh	标点
-㇐	bh	标点
-㇑	bh	标点
-㇒	bh	标点
-㇓	bh	标点
-㇔	bh	标点
-㇕	bh	标点
-㇖	bh	标点
-㇗	bh	标点
-㇘	bh	标点
-㇙	bh	标点
-㇚	bh	标点
-㇛	bh	标点
-㇜	bh	标点
-㇝	bh	标点
-㇞	bh	标点
-㇟	bh	标点
-㇠	bh	标点
-㇡	bh	标点
-㇢	bh	标点
-㇣	bh	标点
-#bh:
-#笔画#
+bdz:﹅,﹆,﹁,﹂,﹃,﹄,︙,︱,︻,︼,︗,︘,︵,︶,︷,︸,︹,︺,︿,﹀,︽,︾,︰,︲,︳,︴,﹉,﹊,﹋,﹌,﹍,﹎,﹏,﹇,﹈,︐,︑,︒,︔,︕,︖
+#标点竖
+bd:、,。,「,」,『,』,【,】,〈,〉,《,》,₋,⁻,―,˗,ˉ,＿,﹍,﹎,．,¡,‼,⁉,¿,؟,⁈,⁇,､,｡,〃,〄,々,〆,〇,〒,〓,〔,〕,〖,〗,〘,〙,〚,〛,〜,〝,〞,〟,〠,〰,〱,〲,〳,〴,〵,〶,〷,〻,〼,〽
+#标点
+bh:㇀,㇁,㇂,㇃,㇄,㇅,㇆,㇇,㇈,㇉,㇊,㇋,㇌,㇍,㇎,㇏,㇐,㇑,㇒,㇓,㇔,㇕,㇖,㇗,㇘,㇙,㇚,㇛,㇜,㇝,㇞,㇟,㇠,㇡,㇢,㇣
+#笔画
 一	kx	康熙
 丨	kx	康熙
 丶	kx	康熙
