--- a/Rime/weasel/user/_schema_settings/ts_en.yaml
+++ b/Rime/weasel/user/_schema_settings/ts_en.yaml
@@ -7,9 +7,9 @@
  - {name: fil_KijinSeija, reset: 0, states: ["正", "倒"]}
 array:
  bindings:
-  - {accept: "Control+minus", select: ts_cn_quanpin, when: always}
-  - {accept: "Control+equal", select: ts_cn, when: always}
-  - {accept: "Shift+6", toggle: fil_trans, when: always}
+  - {accept: "Control+6", toggle: fil_trans, when: always}
+  - {accept: "Control+7", toggle: fil_Unicode, when: always}
+  - {accept: "Control+8", toggle: fil_KijinSeija, when: always}
 map:
  menu: {page_size: 7}
  style:
