--- a/Rime/weasel/user_default/_schema_settings/ts_triple.yaml
+++ b/Rime/weasel/user_default/_schema_settings/ts_triple.yaml
@@ -23,3 +23,5 @@ array:
   - {accept: "Control+4", toggle: fil_huoxin, when: always}
   - {accept: "Control+5", toggle: fil_symbol, when: always}
   - {accept: "Control+6", toggle: fil_trans, when: always}
+  - {accept: "Control+7", toggle: fil_Unicode, when: always}
+  - {accept: "Control+8", toggle: fil_KijinSeija, when: always}
