--- a/Rime/weasel/data/_speller/quanpin.yaml
+++ b/Rime/weasel/data/_speller/quanpin.yaml
@@ -1,4 +1,4 @@
-﻿module_dmma: {comment_format: ["xlit/ZCSBH/vuiee/"]}
+module_dmma: {comment_format: ["xlit/ZCSBH/vuiee/"]}
 speller:
  alphabet: "zyxwvutsrqponmlkjihgfedcbaZYXWVUTSRQPONMLKJIHGFEDCBA-=|"
  initials: "zyxwvutsrqponmlkjihgfedcbaZYXWVUTSRQPONMLKJIHGFEDCBA"
