--- a/Rime/weasel/data/ts__detail.yaml
+++ b/Rime/weasel/data/ts__detail.yaml
@@ -9,8 +9,8 @@ engine:
   - recognizer
   - key_binder
   - speller
+  - lua_processor@auto_digital
   - punctuator
-  #- lua_processor@stcs
   - lua_processor@plain_return
   - selector
   - navigator
@@ -56,8 +56,73 @@ fil_Unicode: {option_name: fil_Unicode}
 #stcs: {option_name: fil_s2t, opencc_config: s2t.json}
 speller: {delimiter: " '"}
 punctuator:
- full_shape: {' ' : { commit: '　' }, ',' : { commit: ， }, '.' : { commit: 。 }, '<' : [ 《, 〈, «, ‹ ], '>' : [ 》, 〉, », › ], '/' : [ ／, ÷ ], '?' : { commit: ？ }, ';' : { commit: ； }, ':' : { commit: ： }, '''' : { pair: [ '‘', '’' ] }, '"' : { pair: [ '“', '”' ] }, '\' : [ 、, ＼ ], '|' : [ ·, ｜, '§', '¦' ], '`' : ｀, '~' : ～, '!' : { commit: ！ }, '@' : [ ＠, ☯ ], '# ' : [ ＃, ⌘ ], '%' : [ ％, '°', '℃' ], '$' : [ ￥, '$', '€', '£', '¥', '¢', '¤' ], '^' : { commit: …… }, '&' : ＆, '*' : [ ＊, ·, ・, ×, ※, ❂ ], '(' : （, ')' : ）, '-' : －, '_' : ——, '+' : ＋, '=' : ＝, '[' : [ 「, 【, 〔, ［ ], ']' : [ 」, 】, 〕, ］ ], '{' : [ 『, 〖, ｛ ], '}' : [ 』, 〗, ｝ ]}
- half_shape: {',' : '，', '.' : '。', '<' : '《', '>' : '》', '/' : '/', '?' : '？', ';' : '；', ':' : '：', '''' : { pair: [ '‘', '’' ] }, '"' : { pair: [ '“', '”' ] }, '\' : '、', '|' : '|', '`' : '`', '~' : '~', '!' : '！', '@' : '@', '# ' : '# ', '%' : '%', '$' : '¥', '^' : '……', '&' : '&', '*' : '*', '(' : '（', ')' : '）', '-' : '-', '_' : ——, '+' : '+', '=' : '=', '[' : '【', ']' : '】', '{' : '「', '}' : '」'}
+  full_shape:
+   ' ' : {'commit': '　'}
+   ',' : {'commit': '，'}
+   '.' : {'commit': '。'}
+   '<' : ['《', '〈', '«', '‹']
+   '>' : ['》', '〉', '»', '›']
+   '/' : ['／', '÷']
+   '?' : {'commit': '？'}
+   ';' : {'commit': '；'}
+   ':' : {'commit': '：'}
+   '''': {'pair'  : ['‘', '’']}
+   '"' : {'pair'  : ['“', '”']}
+   '\' : ['、', '＼']
+   '|' : ['·', '｜', '§', '¦']
+   '`' : '｀'
+   '~' : '～'
+   '!' : {'commit': '！'}
+   '@' : ['＠', '☯']
+   '# ': ['＃', '⌘']
+   '%' : ['％', '°', '℃']
+   '$' : ['￥', '$', '€', '£', '¥', '¢', '¤']
+   '^' : {'commit': '……'}
+   '&' : '＆'
+   '*' : ['＊', '·', '・', '×', '※', '❂']
+   '(' : '（'
+   ')' : '）'
+   '-' : '－'
+   '_' : '——'
+   '+' : '＋'
+   '=' : '＝'
+   '[' : ['「', '【', '〔', '［']
+   ']' : ['」', '】', '〕', '］']
+   '{' : ['『', '〖', '｛']
+   '}' : ['』', '〗', '｝']
+  half_shape:
+   ',' : '，'
+   '.' : '。'
+   '<' : '《'
+   '>' : '》'
+   '/' : '/'
+   '?' : '？'
+   ';' : '；'
+   ':' : '：'
+   '''': {'pair'  : ['‘', '’']}
+   '"' : {'pair'  : ['“', '”']}
+   '\' : '、'
+   '|' : '|'
+   '`' : '`'
+   '~' : '~'
+   '!' : '！'
+   '@' : '@'
+   '# ': '# '
+   '%' : '%'
+   '$' : '¥'
+   '^' : '……'
+   '&' : '&'
+   '*' : '*'
+   '(' : '（'
+   ')' : '）'
+   '-' : '-'
+   '_' : '——'
+   '+' : '+'
+   '=' : '='
+   '[' : '【'
+   ']' : '】'
+   '{' : '「'
+   '}' : '」'
 recognizer:
  lua:
   execute: '//'                                       #计算器
