--- a/Rime/weasel/data/module_jian_shape_yuhao.dict.yaml
+++ b/Rime/weasel/data/module_jian_shape_yuhao.dict.yaml
@@ -3,5 +3,5 @@ name: module_jian_shape_yuhao
 version: "2018.1.11"
 sort: by_weight
 import_tables:
- - _dict/_dic_shape/jian/yuhao
+ - _dict/_dic_shape/yuhao/yuhao.quick
 ...
