--- a/Rime/weasel/data/ts_shape_yuhao.dict.yaml
+++ b/Rime/weasel/data/ts_shape_yuhao.dict.yaml
@@ -4,6 +4,6 @@ version: "20230926035256"
 vocabulary: char_weight
 sort: by_weight
 import_tables:
- - _dict/_dic_shape/chars/yuhao
- - _dict/_dic_shape/words/expand
+ - _dict/_dic_shape/yuhao/yuhao.full
+ - _dict/_dic_shape/expand
 ...
